syntax = "proto2";

option java_multiple_files = true;
package com.github.xenorith.grpc;

message HelloRequest {
  optional string firstName = 1;
  optional string lastName = 2;
  optional int32 id = 3;
}

message HelloResponse {
  optional string response = 1;
}

service HelloService {
  rpc hello(HelloRequest) returns (HelloResponse);
}
